<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>simple_multithread</name>
  <version>0.0.1</version>
  <description>Tests for measuring ROS2 services latency</description>
  <maintainer email="alberto.soragna@gmail.com">Alberto Soragna</maintainer>
  <author>Alberto Soragna</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>simple_interfaces</build_depend>
  <build_depend>simple_publisher</build_depend>
  <build_depend>simple_subscriber</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <build_depend>simple_interfaces</build_depend>
  <exec_depend>simple_publisher</exec_depend>
  <exec_depend>simple_subscriber</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

